# fullstack

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: error.rs
backend/src/db/: mod.rs  owner.rs  pet.rs
common/: Cargo.toml
frontend/: Cargo.toml
frontend/src/: lib.rs
frontend/src/owner/: create.rs  detail.rs  list.rs
frontend/src/pet/: create.rs
