[package]
name = "backend"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

[dependencies]
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
warp = "0.3.2"
mobc = "0.7.3"
mobc-postgres = { version = "=0.7.0", features = ["with-chrono-0_4", "with-serde_json-1"] }
serde = {version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
common = { version = "0.1.0", path = "../common" }

[profile.dev]
debug = 0

